# python-crash-course

./: example.ipynb  example.txt  main.py  projectstructure.py  pyproject.toml  requirements.txt  setup.py
Roziproject/raw_file/: data.csv
SampleProject.egg-info/: PKG-INFO
artifacts/: test.csv  train.csv
cookiecutter/ml1/: AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  pyproject.toml  tox.ini
cookiecutter/ml1/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
cookiecutter/ml1/src/ml1/: __init__.py
cookiecutter/ml1/tests/: __init__.py  test_ml1.py
my_awesome_project.egg-info/: PKG-INFO
src/components/: dataingestion.py  datavalidation.py
src/exception/: exception.py
src/logging/: logger.py
