[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ml1"
version = "0.1.0"
description = "test project to check how to build project"
readme = "README.rst"
authors = [
  {name = "MLproject", email = "rozinarazzak98@gmail.com"}
]
maintainers = [
  {name = "MLproject", email = "rozinarazzak98@gmail.com"}
]
classifiers = [

]
license = {text = "MIT license"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/RozinaRazzak/ml1/issues"
changelog = "https://github.com/RozinaRazzak/ml1/blob/master/changelog.md"
homepage = "https://github.com/RozinaRazzak/ml1"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

